<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.project.ProjectFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_sub_task"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:background="@drawable/auth_button"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/auth_page_blue_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:textColor="@color/homebackgroundcolor"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:text="Task Planner" />


    <TextView
        android:id="@+id/startDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background_color"
        app:layout_constraintStart_toEndOf="@+id/startDateTextView2"
        app:layout_constraintTop_toTopOf="@+id/startDateTextView2" />

    <TextView
        android:id="@+id/startDateTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_date"
        android:textColor="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/startDateTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="20dp"
        android:text="@string/end_date"
        android:textColor="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/endDateTexTView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background_color"
        app:layout_constraintStart_toEndOf="@+id/startDateTextView3"
        app:layout_constraintTop_toTopOf="@+id/startDateTextView3" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/progress_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:padding="5dp"
        app:checkedChip="@+id/doneStateChip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/todoChip"
            style="@style/CustomChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/to_do" />

        <com.google.android.material.chip.Chip
            android:id="@+id/inProgressChip"
            style="@style/CustomChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="8dp"
            android:text="@string/work_in_progress" />

        <com.google.android.material.chip.Chip
            android:id="@+id/doneChip"
            style="@style/CustomChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/done" />
    </com.google.android.material.chip.ChipGroup>

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="36dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/editing" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="36dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bin" />

    <EditText
        android:id="@+id/project_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/edittext_custom"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/task_planner"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>