<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.loginfragment.LoginFragment"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/blueBackGround"
            android:layout_width="match_parent"
            android:layout_height="332dp"
            android:src="@drawable/auth_page_blue_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="106dp"
            android:layout_height="114dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.11" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:text="@string/welcome"
            android:textColor="#004481"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blueBackGround" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterEmailTextInputLayout"
            style="@style/TextInputLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="32dp"
            android:hint="@string/enter_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#004481"
                android:textSize="15sp"
                tools:text="Aleksandre.galogrebaramidze@space.ge" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPasswordTextInputLayout"
            style="@style/TextInputLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_password"
            app:errorEnabled="false"
            app:helperTextEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterEmailTextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#004481">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#004481"
                android:textSize="15sp"
                tools:text="paroli" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/statusTextColors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/dontHaveAccountTextView"
            app:layout_constraintTop_toBottomOf="@+id/enterPasswordTextInputLayout" />

        <TextView
            android:id="@+id/dontHaveAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/statusTextColors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPasswordTextInputLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/auth_button"
            android:text="@string/log_in"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dontHaveAccountTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
