<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.registration.RegisterFragment"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/blueBackGround"
            android:layout_width="411dp"
            android:layout_height="218dp"
            android:src="@drawable/auth_page_blue_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:text="@string/welcome"
            android:textColor="@color/statusTextColors"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blueBackGround" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterNameTextInputLayout"
            android:layout_width="match_parent"
            style="@style/TextInputLayoutTheme"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="32dp"
            android:hint="@string/enter_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/statusTextColors"
                android:textSize="15sp"
                tools:text="Sandro Galogre" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterEmailTextInputLayout"
            style="@style/TextInputLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/statusTextColors"
                android:textSize="15sp"
                tools:text="Aleksandre.galogrebaramidze@space.ge" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            style="@style/TextInputLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterEmailTextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/statusTextColors">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/statusTextColors"
                android:textSize="15sp"
                tools:text="paroli" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordTextInputLayout"
            style="@style/TextInputLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:hint="@string/repeat_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/statusTextColors">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/statusTextColors"
                android:textSize="15sp"
                tools:text="paroli" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/goToSignInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/statusTextColors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/alreadyHaveAccount"
            app:layout_constraintTop_toBottomOf="@+id/repeatPasswordTextInputLayout" />

        <TextView
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/statusTextColors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatPasswordTextInputLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/auth_button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goToSignInTextView" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="312dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/blueBackGround"
            app:layout_constraintVertical_bias="0.002" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ProfilePictureImageView"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/blueBackGround"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/blueBackGround"
            app:layout_constraintVertical_bias="0.512"
            app:shapeAppearanceOverlay="@style/Circular"
            app:srcCompat="@drawable/add_image"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"/>

        <TextView
            android:id="@+id/add_you_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_your_profile_picture"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProfilePictureImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
