<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newproject.NewProjectFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@drawable/auth_page_blue_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/create_project"
        android:textColor="@color/homebackgroundcolor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterTaskNameTextInputLayout"
        style="@style/TextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="168dp"
        android:hint="@string/enter_project_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterTaskNameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/statusTextColors"
            android:textSize="15sp"
            tools:text="Task Planner" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterDescriptionEditText"
        style="@style/TextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="28dp"
        android:hint="@string/project_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTaskNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterDescriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/statusTextColors"
            android:textSize="15sp"
            tools:text="that project is awesome" />
    </com.google.android.material.textfield.TextInputLayout>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarTextColor="#FFFFFF"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:yearListSelectorColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CreateProjectButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/auth_button"
        android:text="@string/create_new_project"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        app:layout_constraintVertical_bias="0.802" />

</androidx.constraintlayout.widget.ConstraintLayout>